@@ -2,17 +2,14 @@ package com.navercorp.pinpoint.inspector.web.definition.metric;
 
 import com.navercorp.pinpoint.inspector.web.model.InspectorMetricValue;
 import com.navercorp.pinpoint.metric.web.model.MetricValue;
+import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 import java.util.stream.Collectors;
-
-import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * @author minwoo.jung
@@ -24,101 +21,73 @@ class AvgUsingIntervalPostProcessorTest {
         AvgUsingIntervalPostProcessor avgUsingIntervalPostProcessor = new AvgUsingIntervalPostProcessor();
         List<InspectorMetricValue> metricValueList = new ArrayList<>();
 
-        List<Double> sampledNewCountValueList = new ArrayList<>();
-        sampledNewCountValueList.add(5.0);
-        sampledNewCountValueList.add(10.0);
-        sampledNewCountValueList.add(15.0);
-        sampledNewCountValueList.add(20.0);
-        sampledNewCountValueList.add(25.0);
-        InspectorMetricValue sampledNewCount = new InspectorMetricValue("sampledNewCount", Collections.emptyList(), "splineChart", "count", sampledNewCountValueList);
+        List<Double> sampledNewCountValueList = List.of(
+                5.0, 10.0, 15.0, 20.0, 25.0
+        );
+        InspectorMetricValue sampledNewCount = new InspectorMetricValue("sampledNewCount", List.of(), "splineChart", "count", sampledNewCountValueList);
         metricValueList.add(sampledNewCount);
-        
-        List<Double> sampledContinuationCountValueList = new ArrayList<>();
-        sampledContinuationCountValueList.add(10.0);
-        sampledContinuationCountValueList.add(15.0);
-        sampledContinuationCountValueList.add(20.0);
-        sampledContinuationCountValueList.add(25.0);
-        sampledContinuationCountValueList.add(30.0);
-        InspectorMetricValue sampledContinuationCount = new InspectorMetricValue("sampledContinuationCount", Collections.emptyList(), "splineChart", "count", sampledContinuationCountValueList);
+
+        List<Double> sampledContinuationCountValueList = List.of(
+                10.0, 15.0, 20.0, 25.0, 30.0
+        );
+        InspectorMetricValue sampledContinuationCount = new InspectorMetricValue("sampledContinuationCount", List.of(), "splineChart", "count", sampledContinuationCountValueList);
         metricValueList.add(sampledContinuationCount);
-        
-        List<Double> unsampledNewCountValueList = new ArrayList<>();
-        unsampledNewCountValueList.add(15.0);
-        unsampledNewCountValueList.add(20.0);
-        unsampledNewCountValueList.add(25.0);
-        unsampledNewCountValueList.add(30.0);
-        unsampledNewCountValueList.add(35.0);
-        InspectorMetricValue unsampledNewCount = new InspectorMetricValue("unsampledNewCount", Collections.emptyList(), "splineChart", "count", unsampledNewCountValueList);
+
+        List<Double> unsampledNewCountValueList = List.of(
+                15.0, 20.0, 25.0, 30.0, 35.0
+        );
+        InspectorMetricValue unsampledNewCount = new InspectorMetricValue("unsampledNewCount", List.of(), "splineChart", "count", unsampledNewCountValueList);
         metricValueList.add(unsampledNewCount);
-        
-        List<Double> unsampledContinuationCountValueList = new ArrayList<>();
-        unsampledContinuationCountValueList.add(20.0);
-        unsampledContinuationCountValueList.add(25.0);
-        unsampledContinuationCountValueList.add(30.0);
-        unsampledContinuationCountValueList.add(35.0);
-        unsampledContinuationCountValueList.add(40.0);
-        InspectorMetricValue unsampledContinuationCount = new InspectorMetricValue("unsampledContinuationCount", Collections.emptyList(), "splineChart", "count", unsampledContinuationCountValueList);
+
+        List<Double> unsampledContinuationCountValueList = List.of(
+                20.0, 25.0, 30.0, 35.0, 40.0
+        );
+        InspectorMetricValue unsampledContinuationCount = new InspectorMetricValue("unsampledContinuationCount", List.of(), "splineChart", "count", unsampledContinuationCountValueList);
         metricValueList.add(unsampledContinuationCount);
-        
-        List<Double> skippedNewSkipCountValueList = new ArrayList<>();
-        skippedNewSkipCountValueList.add(25.0);
-        skippedNewSkipCountValueList.add(30.0);
-        skippedNewSkipCountValueList.add(35.0);
-        skippedNewSkipCountValueList.add(40.0);
-        skippedNewSkipCountValueList.add(45.0);
-        InspectorMetricValue skippedNewSkipCount = new InspectorMetricValue("skippedNewSkipCount", Collections.emptyList(), "splineChart", "count", skippedNewSkipCountValueList);
+
+        List<Double> skippedNewSkipCountValueList = List.of(
+                25.0, 30.0, 35.0, 40.0, 45.0
+        );
+        InspectorMetricValue skippedNewSkipCount = new InspectorMetricValue("skippedNewSkipCount", List.of(), "splineChart", "count", skippedNewSkipCountValueList);
         metricValueList.add(skippedNewSkipCount);
-        
-        List<Double> skippedContinuationCountValueList = new ArrayList<>();
-        skippedContinuationCountValueList.add(30.0);
-        skippedContinuationCountValueList.add(35.0);
-        skippedContinuationCountValueList.add(40.0);
-        skippedContinuationCountValueList.add(45.0);
-        skippedContinuationCountValueList.add(50.0);
-        InspectorMetricValue skippedContinuationCount = new InspectorMetricValue("skippedContinuationCount", Collections.emptyList(), "splineChart", "count", skippedContinuationCountValueList);
+
+        List<Double> skippedContinuationCountValueList = List.of(
+                30.0, 35.0, 40.0, 45.0, 50.0
+        );
+        InspectorMetricValue skippedContinuationCount = new InspectorMetricValue("skippedContinuationCount", List.of(), "splineChart", "count", skippedContinuationCountValueList);
         metricValueList.add(skippedContinuationCount);
-        
-        List<Double> collectIntervalValueList = new ArrayList<>();
-        collectIntervalValueList.add(5000.0);
-        collectIntervalValueList.add(4000.0);
-        collectIntervalValueList.add(3000.0);
-        collectIntervalValueList.add(2000.0);
-        collectIntervalValueList.add(1000.0);
-        InspectorMetricValue collectInterval = new InspectorMetricValue("collectInterval", Collections.emptyList(), "splineChart", "count", collectIntervalValueList);
+
+        List<Double> collectIntervalValueList = List.of(
+                5000.0, 4000.0, 3000.0, 2000.0, 1000.0
+        );
+        InspectorMetricValue collectInterval = new InspectorMetricValue("collectInterval", List.of(), "splineChart", "count", collectIntervalValueList);
         metricValueList.add(collectInterval);
 
         List<InspectorMetricValue> processedValuesList = avgUsingIntervalPostProcessor.postProcess(metricValueList);
-        assertEquals(7, processedValuesList.size());
+        Assertions.assertThat(processedValuesList)
+                .hasSize(7);
 
 
-        Map<String, InspectorMetricValue> processedValuesMap = processedValuesList.stream().collect(Collectors.toMap(MetricValue::getFieldName, Function.identity()));
+        Map<String, InspectorMetricValue> processedValuesMap = processedValuesList
+                .stream()
+                .collect(Collectors.toMap(MetricValue::getFieldName, Function.identity()));
 
         MetricValue<Double> processedSampledNewCount = processedValuesMap.get("sampledNewCount");
-        assertEquals(5,processedSampledNewCount.getValueList().size());
+        Assertions.assertThat(processedSampledNewCount.getValueList())
+                .hasSize(5)
+                .containsExactly(1.0, 2.5, 5.0, 10.0, 25.0);
 
-        assertEquals(1.0, processedSampledNewCount.getValueList().get(0));
-        assertEquals(2.5, processedSampledNewCount.getValueList().get(1));
-        assertEquals(5.0, processedSampledNewCount.getValueList().get(2));
-        assertEquals(10.0, processedSampledNewCount.getValueList().get(3));
-        assertEquals(25.0, processedSampledNewCount.getValueList().get(4));
 
         MetricValue<Double> processedSampledContinuationCount = processedValuesMap.get("sampledContinuationCount");
-        assertEquals(5,processedSampledContinuationCount.getValueList().size());
+        Assertions.assertThat(processedSampledContinuationCount.getValueList())
+                .hasSize(5)
+                .containsExactly(2.0, 3.8, 6.7, 12.5, 30.0);
 
-        assertEquals(2.0, processedSampledContinuationCount.getValueList().get(0));
-        assertEquals(3.8, processedSampledContinuationCount.getValueList().get(1));
-        assertEquals(6.7, processedSampledContinuationCount.getValueList().get(2));
-        assertEquals(12.5, processedSampledContinuationCount.getValueList().get(3));
-        assertEquals(30.0, processedSampledContinuationCount.getValueList().get(4));
 
         MetricValue<Double> processedTotalCount = processedValuesMap.get("totalCount");
-        assertEquals(5,processedTotalCount.getValueList().size());
-
-        assertEquals(21.0, processedTotalCount.getValueList().get(0));
-        assertEquals(33.9, processedTotalCount.getValueList().get(1));
-        assertEquals(55.0, processedTotalCount.getValueList().get(2));
-        assertEquals(97.5, processedTotalCount.getValueList().get(3));
-        assertEquals(225.0, processedTotalCount.getValueList().get(4));
+        Assertions.assertThat(processedTotalCount.getValueList())
+                .hasSize(5)
+                .containsExactly(21.0, 33.9, 55.0, 97.5, 225.0);
     }
 
 }
